# YT-Whisper

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
src/yt_whisper/: __init__.py  cli.py  downloader.py  formatters.py  transcriber.py
