[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt-whisper"
version = "0.1.0"
description = "Extract text from YouTube videos using Whisper"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Romain" }]
keywords = ["youtube", "whisper", "transcription", "speech-to-text", "subtitles"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Utilities",
]
dependencies = [
    "faster-whisper>=1.0.0",
    "yt-dlp>=2024.1.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
moonshine = ["useful-moonshine"]

[project.urls]
Homepage = "https://github.com/V0latix/YT-Whisper"
Repository = "https://github.com/V0latix/YT-Whisper"
Issues = "https://github.com/V0latix/YT-Whisper/issues"

[project.scripts]
yt-whisper = "yt_whisper.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_whisper"]

[tool.hatch.build.targets.sdist]
include = ["src/"]
